2002-04-03  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-e21.el (w3m-resize-image): Asynchronous implementation.
	(w3m-imagick-start-convert-data): New function.
	(w3m-imagick-start-convert-buffer): Ditto.
	(w3m-imagick-start): Ditto.
	(w3m-create-image): Rewrite to resize images asynchronously.
	(w3m-insert-image): Don't resize.

2002-04-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-check-link-tags): Relax the pattern to detect
	headers.

2002-04-02  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-form.el (w3m-form-submit): Confirm when posting from secure page
	to normal page.

	* w3m.el (w3m-redirect-with-get): New user option.
	(w3m-w3m-retrieve): If w3m-redirect-with-get is non-nil, use GET
	method after redirection; Ask user to use POST data after redirection.
	(w3m-w3m-attributes): Set w3m-current-redirect as a cons cell of
	(CODE . LOCATION).
	(w3m-w3m-dump-head-source): Don't cache content if the response code is
	one of 302, 303, 307.
	(w3m-w3m-retrieve): Change POST redirection behavior according to
	response code.
	(w3m-retrieve-and-render): Confirm leaving secure pages.

	* octet.el (mime-preview-octet): Change behavior according to
	whether the return value of mime-entity-content is multibyte or not.
	(mime-view-octet): Ditto.

	* w3m.el (w3m-w3m-retrieve): Don't call w3m-cache-request-header
	when type is nil.

2002-04-01  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-follow-redirection): New user option.
	(w3m-w3m-attributes): Set w3m-current-redirect as nil.
	(w3m-cookie-command-arguments): Abolish.
	(w3m-request-arguments): Use cookie only when w3m-use-cookies is
	non-nil.
	(w3m-header-arguments): New function.
	(w3m-w3m-retrieve): Treat redirection when w3m-follow-redirection
	is non-nil.
	(w3m-w3m-retrieve-1): Renamed from w3m-w3m-retrieve.
	(w3m-prepare-content): Don't care w3m-current-redirect.
	(w3m-goto-url): Ditto.

	* w3m-form.el (w3m-form-new): Added argumnet enctype.
	(w3m-form-enctype): New macro.